@@ -1,10 +1,14 @@
+import com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar
+
 
 plugins {
     antlr
     `java-library`
     eclipse
     jacoco
-    id("com.diffplug.gradle.spotless") version "3.28.0"
+    application
+    id("com.diffplug.gradle.spotless") version "4.3.0"
+    id("com.github.johnrengelman.shadow") version "5.2.0"
 }
 
 group = "net.rptools.scriptparser"
@@ -17,11 +21,19 @@ repositories {
 dependencies {
     antlr("org.antlr:antlr4:4.7.2")
     testImplementation("org.junit.jupiter:junit-jupiter:5.4.0")
-    compile("org.reflections", "reflections", "0.9.11")
-    compile("org.apache.commons", "commons-text", "1.6")
-    compile("com.github.jknack:handlebars:4.1.2")
+    implementation("org.reflections", "reflections", "0.9.11")
+    implementation("org.apache.commons", "commons-text", "1.6")
+    implementation("org.apache.commons", "commons-text", "1.6")
+    implementation("com.github.jknack:handlebars:4.1.2")
     implementation("org.apache.logging.log4j", "log4j-api", "2.11.0");
     implementation("org.apache.logging.log4j", "log4j-1.2-api", "2.11.0");
+    implementation("com.google.inject:guice:4.2.3")
+    implementation("com.google.inject.extensions:guice-assistedinject:4.2.3")
+    implementation("com.google.inject.extensions:guice-testlib:4.2.3")
+    implementation("commons-cli:commons-cli:1.4")
+    implementation("com.google.code.gson", "gson", "2.8.6");
+    testCompile("org.mockito:mockito-core:3.3.3");
+
 }
 
 configure<JavaPluginConvention> {
@@ -39,10 +51,10 @@ spotless {
 
     java {
         target("src/**/*.java")
+        targetExclude("src/main/gen/*", "src/main/antlr/gen/*")
         licenseHeaderFile(file("build-resources/spotless.license.java"))
-        googleJavaFormat()
+        googleJavaFormat("1.8")
         // https://github.com/diffplug/spotless/blob/master/PADDEDCELL.md
-        paddedCell()
     }
 
     format("misc") {
@@ -53,12 +65,12 @@ spotless {
         // or spaces. Takes an integer argument if you don't like 4
         indentWithSpaces(4)
         // https://github.com/diffplug/spotless/blob/master/PADDEDCELL.md
-        paddedCell()
     }
 }
 
 tasks.withType<Test> {
     useJUnitPlatform()
+    jvmArgs("--enable-preview")
     testLogging {
         events("passed", "skipped", "failed", "standard_error", "standard_out")
     }
@@ -70,3 +82,20 @@ jacoco {
     reportsDir = file("build/reports/jacoco")
 }
 
+application {
+    mainClassName = "net.rptools.mtscript.Main"
+}
+
+tasks.withType<ShadowJar>() {
+    manifest {
+        attributes["Main-Class"] = "net.rptools.mtscript.Main"
+    }
+}
+
+tasks.withType<JavaCompile> {
+    options.compilerArgs.add("--enable-preview")
+}
+
+tasks.withType<JavaExec> {
+    jvmArgs("--enable-preview")
+}
